--- a/BulkyWeb/appsettings.json
+++ b/BulkyWeb/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=local;Database=Bulky;Trusted_Connection=True;TrustedServiceCertificate=True"
+  }
 }
