--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
         {
             "name": ".NET Core Launch (web)",
             "type": "coreclr",
+            "preLaunchTask": "BulkyBuild",
             "request": "launch",
             "program": "${workspaceFolder}/BulkyWeb/bin/Debug/net8.0/BulkyWeb.dll",
             "args": [],
