add project files and update paths for BulkyWeb, Bulky.Models, Bulky.Utility, and Bulky.DataAccess

--- a/BulkyWeb/appsettings.json
+++ b/BulkyWeb/appsettings.json
@@ -7,8 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    // "DefaultConnection": "Server=localhost;Database=Bulky;Trusted_Connection=True;TrustServerCertificate=True"
-    "DefaultConnection": "Server=localhost\\MSSQLSERVER01;Database=Bulky;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=localhost;Database=BookStore;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Stripe": {
     "SecretKey": "{SECRET_KEY}",
