--- a/BookStoreWeb/appsettings.json
+++ b/BookStoreWeb/appsettings.json
@@ -19,11 +19,11 @@
   },
   "Authentication": {
     "Microsoft": {
-      "ClientId": "{CLIENT_ID}",
-      "ClientSecret": "{CLIENT_SECRET}"
+      "ClientId": "9211cd0e-9cbe-4721-8142-9588b5f33915",
+      "ClientSecret": "21d7817b-45d1-4b8d-8b5b-8f2fbc694f40"
     }
   },
   "SendGrid": {
-    "SecretKey": "SG.7Q"
+    "SecretKey": "{SENDGRID_API_KEY}"
   }
 }
