--- a/BookStoreWeb/appsettings.json
+++ b/BookStoreWeb/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:leaf-letter-db.database.windows.net,1433;Initial Catalog=BookStoreWeb_db;Persist Security Info=False;User ID=adminleaf;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
+    "DefaultConnection": ""
   },
   "Stripe": {
     "SecretKey": "#",
@@ -20,8 +20,8 @@
   },
   "Authentication": {
     "Microsoft": {
-      "ClientId": "9211cd0e-9cbe-4721-8142-9588b5f33915",
-      "ClientSecret": "21d7817b-45d1-4b8d-8b5b-8f2fbc694f40"
+      "ClientId": "",
+      "ClientSecret": ""
     }
   },
   "SendGrid": {
